# neural-network

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  TODO.md  generate.py
.github/workflows/: CI.yml  gtest-windows-x86_64.yml  gtest.yml  ubuntu-x86_64.yml  windows-arm64.yml  windows-x86_64.yml
cmake/: check_x86_64.c  check_x86_64.cmake  simd_support.asm  simd_support.c  simd_support.cmake
decoder/: CMakeLists.txt  Values.h  main.cpp
mnist/: CMakeLists.txt  main.cpp
mock/: main.cpp
neural-network/: CMakeLists.txt
neural-network/cmake/: install_headers.cmake
neural-network/include/neural-network/: CudaBase.h  base.h  cuda_base.h
neural-network/include/neural-network/intrinsic/: intrinsic.h
neural-network/include/neural-network/math/: math.h
neural-network/include/neural-network/network/: ILayer.h  layer.h  network.h
neural-network/include/neural-network/network/PPO/: environment.h
neural-network/include/neural-network/network/layers/: activation_layer.h  dense_layer.h  fully_connected_layer.h  input_layer.h
neural-network/include/neural-network/types/: BaseMemory.h  CudaMemory.h  Matrix.h  Memory.h  Vector.h  _memory_cpu.h  _memory_cuda.h  buf.h  matrix.h  memory.h  vector.h
neural-network/include/neural-network/utils/: Logger.h  _simd128.h  _simd256.h  _simd512.h  alloc.h  cuda.h  exceptions.h  iostream.h  logger.h  macros.h  simd.h
neural-network/mock/: CMakeLists.txt  main.cpp
neural-network/src/: Base.h  CudaBase.h
neural-network/src/intrinsic/: Intrinsic.h  SIMDSupport.asm  simd_support.asm  simd_support.nasm
neural-network/src/math/: AVX.cpp  AVX512.cpp  Base.h  Cuda.cu  Math.cpp  Math.h  Normal.cpp  SSE.cpp  SSE3.cpp  _Math.h  _math.h  _math_cpu.h  _math_cuda.h  _math_normal.h  _math_simd.h  _math_type.h  cpu_math.cpp  cuda_math.cu  math.cpp  math_normal.cpp
neural-network/src/network/: ILayer.h  Layer.cpp  Layer.h  Network.cpp  Network.h  layer.cpp  network.cpp
neural-network/src/network/PPO/: IEnvironment.h
neural-network/src/network/layers/: FullyConnectedLayer.cpp  FullyConnectedLayer.cu  FullyConnectedLayer.h  activation_layer.cpp  dense_layer.cpp  dense_layer.cu  fully_connected_layer.cpp  fully_connected_layer.cu
neural-network/src/types/: BaseMemory.h  CudaMemory.h  Data.cpp  Data.cu  Data.h  Matrix.cpp  Matrix.h  Memory.h  Vector.cpp  Vector.h  buf.cpp  matrix.cpp  vector.cpp
neural-network/src/utils/: Logger.cpp  Logger.h  Macros.h  exceptions.cpp  logger.cpp
neural-network/tests/: BufTest.cpp  CMakeLists.txt  CudaTestHelper.cu  CudaTestHelper.h  DataTest.cpp  IntrinsicTest.cpp  MathTest.cpp  MatrixTest.cpp  PtrTest.cpp  RefTest.cpp  SpanTest.cpp  VectorTest.cpp  printers.h
src/: Base.h  Network.h  main.cpp
src/cuda/: Base.h  FastMath.cu  FastMath.cuh  Kernels.cu  Kernels.cuh  Matrix.cu  Matrix.cuh  Utils.cu  Utils.cuh  Vector.cu  Vector.cuh
src/enums/: FunctionType.h  LayerType.h
src/intrinsic/: Intrinsic.h  SIMD.h  SIMDSupport.asm  SIMDSupport.c  cpuid.asm
src/math/: AVX.cpp  AVX512.cpp  Base.h  CudaMath.cu  CudaMath.h  FastMath.cpp  FastMath.h  Math.cpp  Math.h  Matrix.cpp  Matrix.h  SIMDMath.cpp  SIMDMath.h  SSE.cpp  Utils.cpp  Utils.h  Vector.cpp  Vector.h  _Math.h
src/network/: Base.h  ILayer.h  Layer.cpp  Layer.h  Network.cpp  Network.h  Train.cpp  Train.h
src/network/PPO/: IEnvironment.h
src/network/layers/: FullyConnectedLayer.cpp  FullyConnectedLayer.cu  FullyConnectedLayer.h
src/types/: Base.h  Data.cu  Data.h  Matrix.cpp  Matrix.h  Vector.cpp
src/utils/: FastMath.cpp  FastMath.h  Logger.cpp  Logger.h  MultiUseBuffer.h
tests/: CMakeLists.txt  CUDATest.cu  CUDATest.h  CudaTestHelper.h  DataTest.cpp  IntrinsicTest.cpp  MathTest.cpp  MatrixTest.cpp  SIMDTest.cpp  VectorTest.cpp
